--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <label for="deviceType" class="form-label">Device Type:</label>
                         <select id="deviceType" name="deviceType" class="form-input">
-                            <option value="inkypi" {% if device_settings.deviceType == "inkypi" %}selected{% endif %}>Pimoroni Inky Impression</option>
+                            <option value="inky.auto" {% if device_settings.deviceType == "inky.auto" %}selected{% endif %}>Pimoroni Inky Impression</option>
                             <option value="lib.waveshare_epd.epd7in3e" {% if device_settings.deviceType == "lib.waveshare_epd.epd7in3e" %}selected{% endif %}>Waveshare 7.3inch e-Paper HAT (E)</option>
                             <option value="lib.waveshare_epd.epd4in0e" {% if device_settings.deviceType == "lib.waveshare_epd.epd4in0e" %}selected{% endif %}>Waveshare 4inch e-Paper HAT+ (E)</option>
                         </select>
